# live2d-voice-chat

./: .gitignore  README.md  create_project_structure.sh  pyproject.toml  requirements.txt
app/: main copy.py  main.py
app/config/: prompts.py  settings.py
app/static/css/: styles.css
app/static/hiyori_pro_ko/: ReadMe.txt  hiyori_pro_t04.can3
app/static/js/: chat copy.js  chat.js  live2d copy.js  live2d.js
app/templates/: chat.html
app/utils/: audio.py  openai_helper.py
